fix: Align keys.

--- a/codejam-virtual-keyboard/src/components/Keyboard/Keyboard.scss
+++ b/codejam-virtual-keyboard/src/components/Keyboard/Keyboard.scss
@@ -16,6 +16,7 @@ $keyboard-key-border-dark: black;
 
   &__line {
     font-size: 0;
+    display: flex;
   }
 
   &__key {
